--- a/README.org
+++ b/README.org
@@ -20,20 +20,21 @@ Security of RSA depends on the difficulty of factoring large integers.
 2. Construct two random prime integer /p/ and /q/ as :
    + 2^{[k/2]-1} ≤ /p/, /q/ ≤ 2^{[k/2]-1} - 1   
 3. N = p * q
-4. Choose e in (Z/_{φ(N)}Z)^* and compute /d/ as :
+4. φ(N) = (p - 1)(q - 1) (/Indicatrice d'Euler/)
+5. Choose e in (Z/_{φ(N)}Z)^* and compute /d/ as :
    + /ed/ ≡ 1 (mod φ(/N/))
 
 | public key | secret key |
 |------------+------------|
 | (N, e)     | (d, p, q)  |
 
-*** Encrypt
+*** Encryption
 A message /m/ is in Z/_{N}Z (the size of the message is less or equal to the size key)
 
 + Alice has the public key (/N/, /e/) 
 + /c/ = m^{e} (mod /n/)
 
-*** Decrypt
+*** Decryption
 
 + Bob has the private key (/d/, /p/, /q/)
 + c^d (mod /N/) = /m/
@@ -52,11 +53,14 @@ in a large prime modulus
 |-----------+--------|
 | (p, g, h) | (p, x) |
 
-*** Encrypt
+*** Encryption
 1. Choose a random /r/ in [1, /p/' - 1]
 2. The encrypted message is (g^r, m*h^r)
 
-*** Decrypt
+ElGamal encryption is probabilistic, meaning that a single plaintext can be encrypted
+to many possible ciphertexts (but ElGamal encryption produces a 2:1 expansion in size from plaintext to ciphertext).
+
+*** Decryption
 + Entry : (g^r, m*h^r)
   + h = g^x [fn:1]
   + (g^r)^x = (g^x)^r = h^r
